Changement de la couleur du liseret

--- a/css/style.blue.css
+++ b/css/style.blue.css
@@ -156,7 +156,7 @@ section {
   width: 6.25rem;
   height: 1px;
   margin: 1.25rem auto;
-  background: #4fbfa8;
+  background: #4896c0;
 }
 
 .lined-compact::after {
