Modification de la position de l'image de la 1ere section suite à changement d'image

--- a/css/style.blue.css
+++ b/css/style.blue.css
@@ -88,7 +88,7 @@ section {
 }
 
 .bg-center {
-  background-position: center center !important;
+  background-position: bottom;
 }
 
 .dark-overlay {
