--- a/css/custom.css
+++ b/css/custom.css
@@ -196,6 +196,17 @@ text-transform: uppercase;
   margin-top: 35px;
 }
 
+/* Section 3 : Le navire */
+
+.owl-carousel.owl-loaded.owl-drag {
+  display: flex;
+  flex-direction: column;
+}
+
+.owl-nav, .owl-dots {
+  margin: auto;
+}
+
 /*Section pagination */
 
 #boat {
