Factorisation du code

--- a/css/style.blue.css
+++ b/css/style.blue.css
@@ -223,7 +223,7 @@ section {
   .onepage-wrapper .section {
     width: 100%;
     min-height: 100vh;
-    overflow-y: auto;
+    overflow: auto;
   }
 }
 
