--- a/css/custom.css
+++ b/css/custom.css
@@ -349,6 +349,18 @@ table, td, th {
 
 /* FIN PAGE DE CREATION DE NEWS */
 
+/* PAGE DE TOUTES LES NEWS */
+
+.post-list {
+  padding-bottom: 3%;
+  border-bottom: 1px solid gray;
+  padding-top: 5%;
+}
+
+.post-item {
+  margin-bottom: 5%;
+}
+
 /* PAGE DE NEWS (UNE NEWS) */
 
 .news-view {
@@ -381,6 +393,25 @@ table, td, th {
 
 #com_submit_btn {
   margin-left: auto;
+}
+
+/* PAGE D'EDITION DES NEWS */
+
+.post-preview {
+  display: flex;
+  flex-direction: column;
+}
+
+.post {
+  height: 300px;
+  overflow: hidden;
+}
+
+.edit-btn-div {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4%;
+  margin-bottom: 5%
 }
 
 /* FOOTER */
