Règle pour l'image de la page des news

--- a/css/custom.css
+++ b/css/custom.css
@@ -248,8 +248,8 @@ text-transform: uppercase;
   margin-bottom: 5%;
 }
 
-.post-news {
-  margin-left: 0;
+.image-news img {
+  width: 350px;
 }
 
 /* PAGE EMBARQUEMENT */
