--- a/css/custom.css
+++ b/css/custom.css
@@ -243,7 +243,7 @@ text-transform: uppercase;
 
 /* PAGE ACTUALITES */
 
-.welcome-news, .welcome-map {
+.welcome-news, .welcome-map, .events-map {
   margin-top: 10%;
   margin-bottom: 5%;
 }
@@ -414,13 +414,19 @@ table, td, th {
   margin-bottom: 5%
 }
 
-/* PAGE DE GESTION DE LA MAP */
+/* PAGE DEs EVENTS DE LA MAP */
 
-/*#map-form label {
-  display: block;
-  width: 150px;
-  float: left;
-}*/
+.events table {
+  width: 100%;
+  margin-bottom: 10%;
+  margin-top: 10%;
+  text-align: center;
+}
+
+.buttons-map {
+  display: flex;
+  justify-content: space-around;
+}
 
 /* FOOTER */
 
