--- a/css/custom.css
+++ b/css/custom.css
@@ -426,7 +426,7 @@ table, td, th {
   margin-left: auto;
 }
 
-#comments {
+#comments-area {
   background-color: cornflowerblue;
   margin-top: 5%;
 }
