--- a/css/custom.css
+++ b/css/custom.css
@@ -249,7 +249,7 @@
 }
 
 .eco-volunteer {
-  margin-top: 150px;
+  margin-top: 165px;
 }
 
 .eco-vol-text {
@@ -309,7 +309,7 @@ table, td, th {
 
 .conteneur {
   position: relative;
-  top: 150px;
+  top: 165px;
 }
 
 #sendMessageButton {
@@ -776,6 +776,11 @@ table, td, th {
   .admin-link, .logout {
     left: 0;
   }
+
+  .navbar-brand img {
+    width: 15%;
+  }
+
 }
 
 /* PAGE ACCUEIL */
@@ -793,7 +798,7 @@ table, td, th {
   }
   
   .nav_infos {
-    left: 30%;
+    left: 4%;
   }
 
   .logo {
@@ -887,7 +892,7 @@ table, td, th {
 
 @media screen and (max-width: 992px) {
   .welcome-news {
-    margin-top: 20%;
+    margin-top: 55%;
   }
 
   .post-div {
@@ -908,7 +913,15 @@ table, td, th {
 
 @media screen and (max-width: 992px) {
   .news-display {
-    margin-top: 15%;
+    margin-top: 50%;
+  }
+}
+
+/* PAGE DE LOGIN */
+
+@media screen and (max-width: 992px) {
+  .login-div {
+    margin-top: 35%;
   }
 }
 
@@ -916,7 +929,7 @@ table, td, th {
 
 @media screen and (max-width: 992px) {
   .admin_interface {
-    margin-top: 35%;
+    margin-top: 55%;
   }
 }
 
@@ -924,7 +937,7 @@ table, td, th {
 
 @media screen and (max-width: 992px) {
   .news-creation {
-    margin-top: 25%;
+    margin-top: 55%;
   }
 }
 
@@ -932,7 +945,7 @@ table, td, th {
 
 @media screen and (max-width: 992px) {
   .welcome-map, .events-map {
-    margin-top: 35%;
+    margin-top: 55%;
   }
 }
 
@@ -940,7 +953,7 @@ table, td, th {
 
 @media screen and (max-width: 992px) {
   .reported_comments {
-    margin-top: 35%;
+    margin-top: 55%;
   }
 }
 
@@ -948,14 +961,21 @@ table, td, th {
 
 @media screen and (max-width: 992px) {
   .welcome-program {
-    margin-top: 35%;
+    margin-top: 55%;
   }
 }
+
+/* PAGE CONTACT */
+
+@media screen and (max-width: 992px) {
+  #sendMessageButton {
+    left: 35%;
+  }
 
 /* MODAL */
 
 @media screen and (max-width: 992px) {
   .modal {
-    left:7%;
+    left: 7%;
   }
 }
