--- a/css/style.blue.css
+++ b/css/style.blue.css
@@ -1489,7 +1489,7 @@ a.text-dark:hover, a.text-dark:focus {
 /*
   * 6. FORMS
   */
-.form-control {
+/*.form-control {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -1832,7 +1832,7 @@ select.form-control-lg:not([size]):not([multiple]) {
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
   background-color: rgba(79, 191, 168, 0.5);
-}
+}*/
 
 /*
 * 7.CODE
